A2-1-*を読み直して修正

--- a/A2-1-2.ipynb
+++ b/A2-1-2.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "**練習**\n",
     "グラフを書いた用紙を配布します．\n",
-    "グラフ上の頂点0からそれぞれの頂点1, $\\ldots\\$, 7への最短経路を求め，用紙に用意した以下のような表に各頂点の最短<u>距離</u>を書きなさい．最短<u>経路</u>を書く必要はありません．\n",
+    "グラフ上の頂点0からそれぞれの頂点1, ..., 7への最短経路を求め，用紙に用意した以下のような表に各頂点の最短<u>距離</u>を書きなさい．最短<u>経路</u>を書く必要はありません．\n",
     "\n",
     "| 頂点 | 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 |\n",
     "| ---  | - | - | - | - | - | - | - | - |\n",
@@ -65,7 +65,7 @@
     "`!apt`と`!pip`の2行で1分近く時間がかかります．\n",
     "多くの行が表示されますが，最終行が次のようであれば，内容は気にしないで構いません．\n",
     "行末のx.xxの部分は1.13などのバージョン番号です．\n",
-    "````\n",
+    "```\n",
     "Successfully installed pygraphviz-x.xx\n",
     "```\n",
     "\n",
@@ -295,7 +295,7 @@
     "長さを含めた辺のリストは`list(G.edges.data())`で得られます．\n",
     "\n",
     "**練習**\n",
-    "次の2つのセルを実行してこのことを確かめなさい．"
+    "次の2つのセルを実行して`.data`の有無で出力が異なることを確かめなさい．"
    ]
   },
   {
