--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -29,11 +29,12 @@
     "最短経路問題を解く際に使うデータ構造を学びます．\n",
     "この章で学ぶデータ構造は次の3つです．\n",
     "\n",
-    "- リスト\n",
-    "- 集合\n",
-    "- 辞書\n",
+    "- リスト型\n",
+    "- 集合型\n",
+    "- 辞書型\n",
     "\n",
-    "5章で，それぞれのデータ構造に対してその内にある要素が含まれるか調べる`in`演算にかかる時間を計測します．リストなどにある要素が含まれるか調べることを「探索」と呼びます．"
+    "5章で，それぞれの型のデータに対して，その内にある要素が含まれるか調べる`in`演算にかかる時間を計測します．\n",
+    "リストや他の型のデータ中に，ある要素が含まれるか調べることを「探索」と呼びます．"
    ]
   },
   {
@@ -42,11 +43,12 @@
     "id": "w122lOTn_mfU"
    },
    "source": [
-    "### 4.1 リスト\n",
-    "Pythonのリストは要素を先頭から順番に並べたデータ構造です．\n",
+    "### 4.1 リスト型\n",
+    "\n",
+    "Pythonのリスト型は要素を先頭から順番に並べたデータ構造です．\n",
     "C言語の配列に似ています．\n",
     "\n",
-    "参考：[リストの説明1](https://docs.python.org/ja/3/tutorial/introduction.html#lists)，[2](https://docs.python.org/ja/3/tutorial/datastructures.html#more-on-lists)\n",
+    "参考：[リスト型の説明1](https://docs.python.org/ja/3/tutorial/introduction.html#lists)，[2](https://docs.python.org/ja/3/tutorial/datastructures.html#more-on-lists)\n",
     "\n",
     "次のセルでは`11,13,17`の3つの要素からなるリストを作成しています．"
    ]
@@ -121,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "type関数を使うと\n",
+    "type関数を使うと変数の型を調べられます．\n",
     "\n",
     "**練習**\n",
     "次のセルで`type(l)`を実行して変数`l`の型が`list`であることを確かめなさい．"
@@ -177,7 +179,7 @@
     "id": "JSHBh1rHBubA"
    },
    "source": [
-    "リストの先頭要素は`l[0]`です．"
+    "リストの先頭要素は`l[0]`で読み書きできます．"
    ]
   },
   {
@@ -207,21 +209,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "uJLVUItZo80t"
-   },
-   "source": [
-    "次のようにリスト`l`の末尾に要素`19`を追加(`append`)することができます．\n",
-    "C言語などと異なりリスト`l`の要素数は可変です．\n",
-    "\n",
-    "参考：Pythonには要素数が固定のタプルもあります．"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "リスト`l`の各要素に同じ処理をする場合は`for ... in`を使います．"
+    "リスト`l`の各要素に同じ処理をする場合は次のように`for`文を使います．"
    ]
   },
   {
@@ -232,6 +222,18 @@
    "source": [
     "for e in l:\n",
     "  print(e, \"はlの要素です\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "uJLVUItZo80t"
+   },
+   "source": [
+    "次のようにリスト`l`の末尾に要素`19`を追加(`append`)することができます．\n",
+    "C言語などと異なりリスト`l`の要素数は可変です．\n",
+    "\n",
+    "参考：Pythonには要素数が固定のタプル型もあります．"
    ]
   },
   {
@@ -266,9 +268,8 @@
     "id": "De1FZT9IpaXW"
    },
    "source": [
-    "リスト`l`の途中に要素を挿入(`insert`)することもできます．\n",
-    "ただし，長いリストの場合は時間がかかります．\n",
-    "かかる時間は要素を挿入する場所より後ろにある要素数に比例します．"
+    "次のようにリスト`l`の途中に要素を挿入(`insert`)することができます．\n",
+    "ただし，長いリストの場合は`append`するより時間がかかります．"
    ]
   },
   {
@@ -392,7 +393,8 @@
     "id": "1EraJeNKB7Lb"
    },
    "source": [
-    "リスト`l`の最後の要素は次のように書けます．"
+    "リスト`l`の最後の要素はリストの要素数を使って次のように書けます．\n",
+    "なお，`len(l)`を省略して`l[-1]`と書くこともできます．"
    ]
   },
   {
@@ -472,7 +474,7 @@
     "```\n",
     "さらに，字下げを元に戻して`print(e)`文を2行書いて実行しなさい．同じ値が2回ずつ出力されます．\n",
     "\n",
-    "参考：上の`for`文は`range`型と`len`関数を使って次のように書くこともできますが，上の書き方のほうがコードが短いので好まれます．"
+    "参考：上の`for`文は添え字`i`と`range`型，`len`関数を使って次のように書くこともできますが，上の書き方のほうがコードが短いので好まれます．"
    ]
   },
   {
@@ -653,9 +655,9 @@
     "id": "hYSi2Gunao0o"
    },
    "source": [
-    "次の練習でリストを`range`関数で生成すると`0`から順番に並んでいます．`in`演算子は要素が順番に並んでいることは想定していませんので，すべての要素を探します．\n",
+    "次の練習でリストを`range`関数で生成すると`0`から順番に並んでいます．`in`演算子は要素が順番に並んでいることは想定していませんので，すべての要素を探します．なお，この演習では扱いませんが，順番通りに並んでいるとわかっていればもっと速く探す二分探索などの方法があります．\n",
     "\n",
-    "順番通りに並んでいるとわかっていればもっと速く探す二分探索などの方法がありますがこの演習は扱いません．次のように`random.shuffle`関数にリスト`l`を渡すと，`l`の順番をわざと乱すことができますが，`in`演算子で正しく要素の有無を調べられます．\n",
+    "次のように`random.shuffle`関数にリスト`l`を渡すと，`l`の順番をわざと乱すことができますが，`in`演算子で正しく要素の有無を調べられます．\n",
     "\n",
     "参考：[random.shuffle関数の説明](https://docs.python.org/ja/3/library/random.html#random.shuffle)"
    ]
@@ -843,7 +845,7 @@
    },
    "source": [
     "**練習**\n",
-    "リスト`l`の要素数を色々変えて試せるように最初のリストの要素数を変数`n`に入れて以下の処理を書きなさい．\n",
+    "リストの要素数を色々変えて試せるようにリストの要素数を変数`n`に入れて以下の処理を書きなさい．\n",
     "書き終わったら`n=100`や`n=10000`，`n=10**7`(10の7乗．一千万)などで実行しなさい．\n",
     "\n",
     "`n=10**8`(1億要素)や`n=10**9`(10億要素)で実行すると「使用可能なRAMをすべて使用した後で、セッションがクラッシュ」することがあります（12.7GBのシステムRAMの仮想PCの場合）．\n",
@@ -859,8 +861,7 @@
    },
    "outputs": [],
    "source": [
-    "# 1. nに10を代入し，0からn-1までn要素のリストlを生成する．list関数とrange関数を使うとよい．\n",
-    "\n"
+    "# 1. リストの要素数を変数nに代入する\n"
    ]
   },
   {
@@ -871,7 +872,18 @@
    },
    "outputs": [],
    "source": [
-    "# 2. リストlの末尾にnを追加する．append関数を使うとよい．\n"
+    "# 2. 0からn-1までn要素のリストlを生成する．list関数とrange関数を使うとよい．\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "XnyTTwiMpI6R"
+   },
+   "outputs": [],
+   "source": [
+    "# 3. リストlの末尾にnを追加する．append関数を使うとよい．\n"
    ]
   },
   {
@@ -882,7 +894,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3. リストlの10番目の直前にn+1を追加する．\n"
+    "# 4. リストlの10番目の直前にn+1を追加する．\n"
    ]
   },
   {
@@ -907,7 +919,7 @@
    },
    "outputs": [],
    "source": [
-    "# 4. 0が含まれているか調べる．Trueが出力される．\n"
+    "# 5. 0が含まれているか調べる．Trueが出力される．\n"
    ]
   },
   {
@@ -932,7 +944,7 @@
    },
    "outputs": [],
    "source": [
-    "# 5. nが含まれているか調べる．Trueが出力される．\n"
+    "# 6. nが含まれているか調べる．Trueが出力される．\n"
    ]
   },
   {
@@ -957,7 +969,7 @@
    },
    "outputs": [],
    "source": [
-    "# 6. リストにn+1が含まれているか調べる．Trueが出力される\n"
+    "# 7. リストにn+1が含まれているか調べる．Trueが出力される\n"
    ]
   },
   {
@@ -982,7 +994,7 @@
    },
    "outputs": [],
    "source": [
-    "# 7. リストにn+2が含まれているか調べる．Falseが出力される．\n"
+    "# 8. リストにn+2が含まれているか調べる．Falseが出力される．\n"
    ]
   },
   {
@@ -993,7 +1005,7 @@
    "source": [
     "### 4.2 集合\n",
     "Pythonの集合型(set)は集合を扱う型です．\n",
-    "リストと異なり重複する要素を持つことができません．\n",
+    "リスト型と異なり重複する要素を持つことができません．\n",
     "順序付けもされません．\n",
     "\n",
     "参考：[集合型の説明](https://docs.python.org/ja/3/tutorial/datastructures.html#sets)\n",
@@ -1164,7 +1176,7 @@
    },
    "source": [
     "**練習**\n",
-    "次のセルを何度か実行しなさい．すでに集合`s`に何度も5を追加しても5が二つ入ることがないことを確かめなさい．"
+    "次のセルを何度か実行しなさい．集合`s`に要素5を何度追加しても同じ要素5が二つ入ることがないことを確かめなさい．"
    ]
   },
   {
@@ -1202,7 +1214,7 @@
     "集合`s`から要素を削除する場合は次のように`remove`関数を使います．\n",
     "要素`5`を削除する例です．\n",
     "\n",
-    "存在しない要素を削除しようとすると次のようなエラーが起こります．\n",
+    "存在しない要素を削除しようとするとキーエラー(`KeyError`)が起こります．\n",
     "\n",
     "```\n",
     "---------------------------------------------------------------------------\n",
@@ -1501,6 +1513,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. 集合sから10を削除する．remove関数を使う．\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1520,8 +1541,7 @@
    },
    "outputs": [],
    "source": [
-    "# 6. 集合sから10を削除したあと，集合sに10が含まれているか調べる．Falseが出力される．\n",
-    "\n"
+    "# 7. 集合sに10が含まれているか調べる．Falseが出力される．\n"
    ]
   },
   {
@@ -1538,28 +1558,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 1133,
-     "status": "ok",
-     "timestamp": 1712302146617,
-     "user": {
-      "displayName": "北須賀輝明",
-      "userId": "08683967670490393975"
-     },
-     "user_tz": -540
-    },
-    "id": "BTQm65Dp6qTM",
-    "outputId": "70cda777-5456-4d22-c3dd-c94470256a23"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 変数nに100などを代入し，0からn-1までのn要素の集合sを生成する．\n",
-    "# 集合の生成にはset関数とrange関数を使うとよい．\n",
-    "\n"
+    "# 1. 変数nに集合の要素数を代入する．20など\n"
    ]
   },
   {
@@ -1584,7 +1586,33 @@
    },
    "outputs": [],
    "source": [
-    "# 2. 集合sの要素数を出力する．len(s)を使うとよい．\n"
+    "# 2. 0からn-1までのn要素の集合sを生成する．\n",
+    "#    集合の生成にはset関数とrange関数を使うとよい．\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 1133,
+     "status": "ok",
+     "timestamp": 1712302146617,
+     "user": {
+      "displayName": "北須賀輝明",
+      "userId": "08683967670490393975"
+     },
+     "user_tz": -540
+    },
+    "id": "BTQm65Dp6qTM",
+    "outputId": "70cda777-5456-4d22-c3dd-c94470256a23"
+   },
+   "outputs": [],
+   "source": [
+    "# 3. 集合sの要素数を出力する．len(s)を使うとよい．\n"
    ]
   },
   {
@@ -1609,7 +1637,7 @@
    },
    "outputs": [],
    "source": [
-    "# 3. 集合sに要素nが含まれているか調べる．Falseが出力される\n"
+    "# 4. 集合sに要素nが含まれているか調べる．Falseが出力される．\n"
    ]
   },
   {
@@ -1634,7 +1662,7 @@
    },
    "outputs": [],
    "source": [
-    "# 4. 集合sに要素nを追加する．\n"
+    "# 5. 集合sに要素nを追加する．\n"
    ]
   },
   {
@@ -1659,7 +1687,7 @@
    },
    "outputs": [],
    "source": [
-    "# 5. 要素数を出力して追加できたことを確認する．\n"
+    "# 6. 要素数を出力して追加できたことを確認する．\n"
    ]
   },
   {
@@ -1684,7 +1712,7 @@
    },
    "outputs": [],
    "source": [
-    "# 6. 集合sに要素nが含まれているか調べる．Trueが出力される\n"
+    "# 7. 集合sに要素nが含まれているか調べる．Trueが出力される．\n"
    ]
   },
   {
@@ -1709,7 +1737,7 @@
    },
    "outputs": [],
    "source": [
-    "# 7. 集合sから要素10を削除する．要素数を出力して削除できたことを確認する．\n"
+    "# 8. 集合sから要素10を削除する．要素数を出力して削除できたことを確認する．\n"
    ]
   },
   {
@@ -1734,7 +1762,7 @@
    },
    "outputs": [],
    "source": [
-    "# 8. 要素数を出力して削除できたことを確認する．\n"
+    "# 9. 要素数を出力して削除できたことを確認する．\n"
    ]
   },
   {
@@ -1759,7 +1787,7 @@
    },
    "outputs": [],
    "source": [
-    "# 9. 集合sに要素10が含まれているか調べる．Falseが出力される．\n"
+    "# 10. 集合sに要素10が含まれているか調べる．Falseが出力される．\n"
    ]
   },
   {
@@ -1770,7 +1798,7 @@
    "source": [
     "### 4.3 辞書\n",
     "Pythonの辞書型(dictionary)は集合型を拡張したデータ構造です．\n",
-    "集合型の各要素をキーと呼び，各キーに対して値を割り当てられます．\n",
+    "集合型キーと値のペアの集合です．\n",
     "キーと値の組の集合で，キーで索引付けされます．\n",
     "リストが0番目，1番目，2番目のように添え字で要素を区別するように，辞書ではキーで要素を区別します．\n",
     "\n",
@@ -1858,8 +1886,8 @@
     "次のように辞書名に`[11]`につけるとキー11の値5が返されます．リストの先頭要素を`l[0]`で読み書きしていたのと同じ記号`[]`でキーを囲みます．\n",
     "\n",
     "**練習**\n",
-    "`d[11]`のセルを書き換えて，13と1のキーで6と7の値が返されることを試しなさい．\n",
-    "さらに，存在しないキー（例えば12）だと次のエラーが起こることを確かめなさい．\n",
+    "`d[11]`のセルを書き換えて，13と17のキーで6と7の値が返されることを試しなさい．\n",
+    "さらに，存在しないキー（例えば12）だと次のようにキーエラー(KeyError)が起こることを確かめなさい．\n",
     "\n",
     "```\n",
     "---------------------------------------------------------------------------\n",
@@ -1903,7 +1931,7 @@
    },
    "source": [
     "次のように指定したキーに対応する値を書き換えることができます．\n",
-    "同じキーに複数の値を割り当てることはできないので，`d[1]`に入っていた値`11`は失われます．"
+    "同じキーに複数の値を割り当てることはできないので，`d[11]`に入っていた値5は失われます．"
    ]
   },
   {
@@ -1973,8 +2001,7 @@
     "id": "8lQ2Dpl1a162"
    },
    "source": [
-    "辞書`d`に要素を追加や削除(`delete`)することができます．\n",
-    "次の例はキー`1`の要素を削除して，キー`10`と値`19`の新たな組を辞書`d`に追加しています．"
+    "次の例はキー19と値8の新たな組を辞書`d`に追加しています．"
    ]
   },
   {
@@ -2000,6 +2027,41 @@
    "outputs": [],
    "source": [
     "d[19] = 8  # キー19と値8の組を辞書dに追加\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "8lQ2Dpl1a162"
+   },
+   "source": [
+    "辞書`d`に要素を追加や削除(`delete`)することができます．\n",
+    "次の例はキー11の要素を辞書`d`から削除しています．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 5,
+     "status": "ok",
+     "timestamp": 1712302146963,
+     "user": {
+      "displayName": "北須賀輝明",
+      "userId": "08683967670490393975"
+     },
+     "user_tz": -540
+    },
+    "id": "OnUq_S_AbI7Z",
+    "outputId": "3b93924e-fa98-4b4b-e7c6-b7b22583e45c"
+   },
+   "outputs": [],
+   "source": [
     "del d[11]  # キーが11の要素を辞書dから削除\n",
     "d"
    ]
@@ -2014,7 +2076,7 @@
     "リストや集合と同じ演算子です．\n",
     "\n",
     "**練習**\n",
-    "`11 in d`のセルを書き換えて，辞書`d`に存在するキーの場合に`True`が返されること，存在しないキーでは`False`が返されることを確かめなさい．"
+    "`13 in d`のセルを書き換えて，辞書`d`に存在するキーの場合に`True`が返されること，存在しないキーでは`False`が返されることを確かめなさい．"
    ]
   },
   {
@@ -2039,7 +2101,7 @@
    },
    "outputs": [],
    "source": [
-    "11 in d"
+    "13 in d"
    ]
   },
   {
@@ -2082,7 +2144,7 @@
     "id": "wnQHvZ4Re2ND"
    },
    "source": [
-    "参考：文字列を辞書`d`のキーにすることもできます．"
+    "参考：次のように文字列を辞書`d`のキーにすることもできます．"
    ]
   },
   {
@@ -2107,12 +2169,12 @@
    },
    "outputs": [],
    "source": [
-    "d2 = {'one': 1, 'two': 2, 'three': 3, 'four': 4}\n",
-    "print(d2['one'])  # キー'one'に対応する値1が出力される\n",
+    "d = {'one': 1, 'two': 2, 'three': 3, 'four': 4}\n",
+    "print(d['one'])  # キー'one'に対応する値1が出力される\n",
     "st = 'two'\n",
-    "print(d2[st])     # キー'two'に対応する値2が出力される\n",
-    "d2[st] = 'ふたつ'\n",
-    "d2"
+    "print(d[st])     # キー'two'に対応する値2が出力される\n",
+    "d[st] = 'ふたつ'\n",
+    "d"
    ]
   },
   {
@@ -2121,8 +2183,8 @@
     "id": "om6-fQ86enY_"
    },
    "source": [
-    "二つのリスト`k`と`v`の要素を先頭から順に組み合わせて辞書を作ることができます．\n",
-    "次の例を実行して理解してください．"
+    "参考：二つのリスト`k`と`v`の要素を先頭から順に組み合わせて辞書を作ることができます．\n",
+    "次の例を実行しすると理解できるかもしれません．"
    ]
   },
   {
@@ -2149,8 +2211,9 @@
    "source": [
     "k = [1, 3, 6]\n",
     "v = [11, 13, 17]\n",
+    "print(list(zip(k, v))) # [(1, 11), (3, 13), (6, 17)]\n",
     "d = dict(zip(k, v))\n",
-    "d   # 出力 {1: 11, 3: 13, 6: 17}"
+    "d                      # {1: 11, 3: 13, 6: 17}"
    ]
   },
   {
@@ -2184,7 +2247,7 @@
     "処理を開始する前と後の2回時刻を取得してその差を処理にかかった時間とみなしています．\n",
     "\n",
     "なお，`time.sleep(1)`は1秒間実行を中断する関数です．\n",
-    "この部分に時間を計りたい処理を書きます．"
+    "後ほど，この`sleep`関数の部分に時間を計りたい処理を書きます．"
    ]
   },
   {
@@ -2415,7 +2478,7 @@
     "  t = []\n",
     "  for i in range(5):         # 時間を5回測る\n",
     "    t0 = time.time()\n",
-    "    element in list_or_other # 上の例で 11 in l の部分\n",
+    "    element in list_or_other # 上の例で 19 in l の部分\n",
     "    t1 = time.time()\n",
     "    t.append(t1 - t0)        # 測った時間をリストtに記録する\n",
     "  t.sort()                   # 5つの時間を小さい順に並べ替える\n",
@@ -2484,7 +2547,7 @@
     "id": "HiyLNAALTJPd"
    },
    "source": [
-    "上のセルのコードでは，`in`演算子の処理は0．1マイクロ秒（10の-7乗秒）くらいの短時間で終わるため計測が難しい．次の練習で`in`演算子を千回繰り返した時間を計測するようにする．\n",
+    "上のセルのコードでは，`in`演算子の処理は0.1マイクロ秒（10の-7乗秒）くらいの短時間で終わるため計測が難しい．次の練習で`in`演算子を千回繰り返した時間を計測するようにする．\n",
     "\n",
     "**練習**\n",
     "同じ処理を千回繰り返すように以下のコード中の`time_to_search`関数を書き替えなさい．\n",
@@ -2655,7 +2718,7 @@
    "source": [
     "**準備3**\n",
     "次のコードで3.5節でグラフを作成するために，計測したデータを保存する辞書として`measurements`を作成する．\n",
-    "`measurements`への計測時間の保存とグラフの作成はすでに作ってある．"
+    "`measurements`への計測時間の保存とグラフの作成は後述する．"
    ]
   },
   {
@@ -2675,7 +2738,7 @@
     "id": "XNrc1jCifw7B"
    },
    "source": [
-    "準備以上である．\n",
+    "準備は以上である．\n",
     "\n",
     "**練習**\n",
     "次のセルのコードはリストから要素`1`を探している．\n",
@@ -3076,7 +3139,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
@@ -3110,7 +3173,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
@@ -3144,7 +3207,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
@@ -3178,7 +3241,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
@@ -3212,7 +3275,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
@@ -3247,7 +3310,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
@@ -3280,7 +3343,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
@@ -3314,7 +3377,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
@@ -3347,7 +3410,7 @@
     "  tlist.append(t) # グラフ用に実行時間を記録．\n",
     "\n",
     "plot(label, nlist, tlist)\n",
-    "measurements[label] = [nlist, tlist] # 3.5節で複数の計測結果をまとめたグラフを作るときのためにこの結果を覚えておく"
+    "measurements[label] = [nlist, tlist]"
    ]
   },
   {
