--- a/A2-1-4.ipynb
+++ b/A2-1-4.ipynb
@@ -8,19 +8,7 @@
    "source": [
     "# 情報科学演習II アルゴリズムとデータ構造II 第1週 4冊目\n",
     "\n",
-    "情報科学演習IIの前半3週間はアルゴリズムとデータ構造IIのテーマです．\n",
-    "このテーマで使うプログラミング言語はPythonです．\n",
-    "\n",
-    "アルゴリズムとデータ構造IIの第2週はこのノートブックを含む4冊のノートブックを使って演習します．\n",
-    "ダイクストラのアルゴリズムを実装します．\n",
-    "先週学んだPythonのリストと集合と辞書を使います．\n",
-    "\n",
-    "この資料で使うアルゴリズムはCormen他著の[アルゴリズムイントロダクション第4版](https://www.kindaikagaku.co.jp/book_list/detail/9784764906488/)の22.2節に示されているものを元にしています．\n",
-    "\n",
-    "この資料で使うグラフ$G_1$はPrinceton大学の[Kevin Wayne](https://www.cs.princeton.edu/~wayne/teaching/)の講義資料に掲載されているものです．\n",
-    "理解しやすいようによく考えられたグラフです．\n",
-    "\n",
-    "#### 第2週目次\n",
+    "#### 第1週目次\n",
     "\n",
     "1. ColabraoryのPythonノートブックに慣れる（1冊目）\n",
     "2. グラフの最短経路問題を解く（2冊目）\n",
@@ -36,7 +24,7 @@
     "id": "CFf_w1bm5i9P"
    },
    "source": [
-    "このノートブック（1章から3章）にコードセルはありません．\n",
+    "このノートブック（6章）にコードセルはありません．\n",
     "読んだりノートに書いたりして理解してください．\n",
     "\n",
     "## 6. ダイクストラのアルゴリズムを理解する\n",
@@ -87,7 +75,7 @@
     "- $i=1, 2, \\ldots, k$に対して辺$(v_{i-1},v_i)$がすべて存在するとき，$k+1$個の頂点の列<$v_0,v_1,v_2, \\ldots, v_k$>を**経路**(あるいは道．path)という．\n",
     "  \n",
     "  例：グラフ$G_1$の<0,4,5,6>は経路である．\n",
-    "  <0,4,7,6>は辺$(7,6)$がないので経路ではない．\n",
+    "  <0,4,7,6>は辺(7,6)がないので経路ではない．\n",
     "- 経路<$v_0,v_1,v_2, \\ldots, v_k$>について，最初の頂点$v_0$を **始点**と呼び，最後の頂点$v_k$を**終点**と呼ぶ．\n",
     "  \n",
     "  例：グラフ$G_1$の経路<0,4,5,6>の始点は0，終点は6である．\n",
@@ -155,7 +143,7 @@
     "始点0から終点6への最短経路の求め方は後で考えることにして，ひとまず長さが25より短い経路がないか探しなさい．\n",
     "長さが25の別の経路がないかも探しなさい．\n",
     "\n",
-    "長さが25以下の見つかりましたか？\n",
+    "長さが25以下の経路がないことがわかりましたか？\n",
     "\n",
     "以下に5つの経路例と，それぞれの距離を示します．\n",
     "これらの経路は次の図で赤や青の矢印で指すので，確かめなさい．\n",
@@ -193,11 +181,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. 始点0から遠そうな頂点5を終点として，頂点の数が少ない経路<0,1,5>の距離を求める．\n",
+    "1. 始点0から遠そうな頂点5を終点として，頂点の数が少ない経路<0,1,5>の距離21を求める．\n",
     "\n",
     "   ![](figs/i-1.svg)\n",
     "\n",
-    "1. 求めた距離を頂点5の短い距離$d[5]=21$としてメモする．\n",
+    "1. 求めた距離を頂点5の短い距離$d[5]=$21としてメモする．\n",
     "   ついでに，経路の途中の頂点1についても距離$d[1]＝16$をメモする．\n",
     "\n",
     "   ![](figs/i-2.svg)\n",
@@ -221,12 +209,12 @@
     "   ![](figs/i-6.svg)\n",
     "\n",
     "   求めた最短距離を表にまとめると次のように表せる．\n",
-    "   \n",
-    "   | 頂点 | 0 |  1 |  2 |  3 |  4 |  5 |\n",
-    "   | ---  | - | :-: | :-: | - | - | - |\n",
-    "   | 距離 | 0 | 14 | 14 |  4 |  7 |  8 |\n",
     "\n",
-    "1. 三角形<0,3,4>や<0,1,4>，<1,4,5>は最も長い一辺よりほかの2辺の和が小さいので，和が小さい2辺を通る経路の方が短いだろう．．．\n"
+    "| 頂点 | 0 |  1 |  2 |  3 |  4 |  5 |\n",
+    "| ---  | - | :-: | :-: | - | - | - |\n",
+    "| 距離 | 0 | 14 | 14 |  4 |  7 |  8 |\n",
+    "\n",
+    "7. 三角形<0,3,4>や<0,1,4>，<1,4,5>は最も長い一辺よりほかの2辺の和が小さいので，和が小さい2辺を通る経路の方が短いだろう．．．\n"
    ]
   },
   {
@@ -240,7 +228,7 @@
     "漏れがあるとは最短距離より長い経路を選んで最短だと思い込んだということです．\n",
     "\n",
     "この節では，漏れなく調べる方法として幅優先探索をしてみます．\n",
-    "ある頂点$u\\in V$への短い経路<0, $\\ldots, u$>がわかっているときに，$u$に隣接する頂点$v$を終点とする経路<0, $\\ldots, u, v$>を計算し，この経路が短い経路であれば記録し，さらに探索します．\n",
+    "ある頂点$u\\in V$への短い経路<0, ..., $u$>がわかっているときに，$u$に隣接する頂点$v$を終点とする経路<0, ..., $u, v$>を計算し，この経路が短い経路であれば記録し，さらに探索します．\n",
     "幅優先で探索するので，短い経路が見つかった場合，この経路の終点$v$をキューに入れておき，のちほどこの頂点$v$に対してさらに$v$に隣接する頂点への経路を探索します．\n",
     "\n",
     "キューに頂点がなくなったら漏れなく調べたと判断します．\n",
@@ -250,8 +238,8 @@
     "6.2.1項と同じグラフと始点です．\n",
     "まず以下の解説を読む前に自分のノートに書いて試してください．\n",
     "\n",
-    "図中の$d[1]$や青字で書いた16は始点0からその頂点までの短い経路の距離です．\n",
-    "経路が見つかっていない頂点は最短経路長を∞と考えることにします．\n",
+    "図中の青字で書いた$d[0]=0$や∞は始点0からその頂点までの短い経路の距離です．\n",
+    "経路が見つかっていない頂点は最短経路長を∞(無限大)と考えることにします．\n",
     "調べている頂点$u$とそこから伸びる辺($u,v$)や経路長は赤字で示します．"
    ]
   },
@@ -284,7 +272,7 @@
     "\n",
     "   ![](figs/j-4.svg)\n",
     "\n",
-    "1. キューから頂点4を取り出し，頂点4の隣接頂点0,1,3,5について，経路<0,3,4>を通る経路の距離を計算する．経路<0,3,4,1>と<0,3,4,5>がこれまでの経路より短い経路なので，$d[1]$と$d[5]$を更新する．キューにない頂点1を追加する．\n",
+    "1. キューから頂点4を取り出し，頂点4の隣接頂点0,1,3,5について，経路<0,3,4>を通る経路の距離を計算する．経路<0,3,4,1>と<0,3,4,5>がこれまでの経路より短い経路なので，$d[1]$と$d[5]$を更新する．キューにない頂点1をキューに追加する．\n",
     "\n",
     "   ![](figs/j-5.svg)\n",
     "\n",
@@ -315,9 +303,9 @@
     "\n",
     "   求めた最短距離を表にまとめると次のように表せる．\n",
     "\n",
-    "   | 頂点 | 0 |  1 |  2 |  3 |  4 |  5 |\n",
-    "   | ---  | :-: | :-: | :-: | :-: | :-: | :-: |\n",
-    "   | 距離 | 0 | 13 | 14 |  4 |  7 |  8 |\n"
+    "| 頂点 | 0 |  1 |  2 |  3 |  4 |  5 |\n",
+    "| ---  | :-: | :-: | :-: | :-: | :-: | :-: |\n",
+    "| 距離 | 0 | 13 | 14 |  4 |  7 |  8 |\n"
    ]
   },
   {
@@ -354,7 +342,7 @@
     "もし距離が最も短い頂点が複数ある場合は，それらのうちどれを選んでも構いません．\n",
     "\n",
     "このように，何らかの基準に基づいて，各繰り返しで近視眼的に最適な判断を繰り返して解を作り上げていくアルゴリズムは，**貪欲なアルゴリズム**（グリーディーアルゴリズム，greedy algorithm）と呼ばれます．\n",
-    "2.2節の方法では一端調べた頂点2を後でもう一度調べることがありました．\n",
+    "6.2.2項の方法では一端調べた頂点2を後でもう一度調べることがありました．\n",
     "ダイクストラのアルゴリズムは最短距離が確定した頂点を選ぶので，このように2度調べるといった後戻り（あるいはやり直し）がありません．\n",
     "\n",
     "また，ここで示すダイクストラのアルゴリズムにはいくつか制約があります．\n",
@@ -365,7 +353,7 @@
     "min優先度付きキューについては今週の5章で扱います．\n",
     "優先度付きキューは**演習Iのアルゴリズムとデータ構造I**で学んだデータ構造です．\n",
     "\n",
-    "このアルゴリズムを6.3.1項で疑似コードにします．\n",
+    "このアルゴリズムを6.3.2項で疑似コードにします．\n",
     "\n",
     "また，始点からの経路が存在しない頂点が存在するグラフを非連結グラフと言い，非連結グラフの場合は疑似コードの修正が少し必要です．\n"
    ]
@@ -391,18 +379,18 @@
     "   1. 頂点集合$Q$から$d[u]$が最小の頂点$u$を一つ選び，$u$をQから削除する．\n",
     "   1. 頂点$u$を$S$に加える．\n",
     "   1. 頂点$u$に隣接する頂点$v$それぞれについて以下の処理をする．\n",
-    "      1. $d[v]$と$d[u]+l_{(u,v)}$のうち，小さい方を新たな$d[v]$とする．\n",
+    "      1. $d[v]$と$d[u]+l_{(u,v)}$のうち，短い方を新たな$d[v]$とする．\n",
     "\n",
-    "次回の後半の実装では，$Q$のデータ構造として最小優先度付きキューを使うことで効率化する．\n",
+    "次回の後半の実装では，$Q$のデータ構造としてmin優先度付きキューを使うことで効率化する．\n",
     "上の3の段階で始点$s$がキューの先頭に来るようにキュー内で$s$を移動する．\n",
-    "上の4-Aの段階で，頂点集合$Q$から$d[u]$が最小の頂点$u$を選ぶ際，キューの先頭要素が最小値である．\n",
-    "4-C-aの段階で，距離$d[v]$が短くなる場合は$Q$の中での順位も変更する．\n",
+    "上の4-1の段階で，頂点集合$Q$から$d[u]$が最小の頂点$u$を選ぶ際，キューの先頭要素が最小値である．\n",
+    "4-3-1の段階で，$d[u]+l_{(u,v)}$の方が短い場合は$Q$の中での順位も変更する．\n",
     "\n",
-    "次回の前半の実装では，$Q$のデータ構造として，最小優先度付きキューではなくリストを用いる．\n",
+    "次回の前半の実装では，$Q$のデータ構造として，min優先度付きキューではなくリストを用いる．\n",
     "リストの方が実装が簡単になるものの，リストの探索はリストサイズが大きくなると時間がかかるため，実行速度は遅い．\n",
     "\n",
     "これを疑似コードで書くと次の`dijkstra`関数になる．\n",
-    "次回のどちらの実装でもこの関数はほぼ同一である．\n",
+    "次回前半と後半のどちらの実装でもこの関数はほぼ同一である．\n",
     "```\n",
     "d = {} # d[v]は頂点sから頂点vまでの距離\n",
     "Q = [] # 距離が確定していない頂点のリスト\n",
@@ -530,10 +518,10 @@
     "   ![](figs/k-8.svg)\n",
     "   \n",
     "   求めた最短距離を表にまとめると次のように表せる．\n",
-    "   \n",
-    "   | 頂点 | 0 |  1 |  2 |  3 |  4 |  5 |\n",
-    "   | ---  | - | :-: | :-: | - | - | - |\n",
-    "   | 距離 | 0 | 13 | 14 |  4 |  7 |  8 |"
+    "\n",
+    "| 頂点 | 0 |  1 |  2 |  3 |  4 |  5 |\n",
+    "| ---  | - | :-: | :-: | - | - | - |\n",
+    "| 距離 | 0 | 13 | 14 |  4 |  7 |  8 |"
    ]
   },
   {
@@ -642,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
