A2-1-*を読み直して修正

--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -474,7 +474,7 @@
     "```\n",
     "さらに，字下げを元に戻して`print(e)`文を2行書いて実行しなさい．同じ値が2回ずつ出力されます．\n",
     "\n",
-    "参考：上の`for`文は添え字`i`と`range`型，`len`関数を使って次のように書くこともできますが，上の書き方のほうがコードが短いので好まれます．"
+    "参考：上の`for`文は添え字`i`と`range`型，`len`関数を使って下のように書くこともできますが，上の書き方のほうがコードが短いので好まれます．"
    ]
   },
   {
@@ -861,7 +861,7 @@
    },
    "outputs": [],
    "source": [
-    "# 1. リストの要素数を変数nに代入する\n"
+    "# 1. リストの要素数10を変数nに代入する\n"
    ]
   },
   {
@@ -1003,7 +1003,7 @@
     "id": "HO30SA2GyOFj"
    },
    "source": [
-    "### 4.2 集合\n",
+    "### 4.2 集合型\n",
     "Pythonの集合型(set)は集合を扱う型です．\n",
     "リスト型と異なり重複する要素を持つことができません．\n",
     "順序付けもされません．\n",
@@ -1176,7 +1176,7 @@
    },
    "source": [
     "**練習**\n",
-    "次のセルを何度か実行しなさい．集合`s`に要素5を何度追加しても同じ要素5が二つ入ることがないことを確かめなさい．"
+    "次のセルを何度か実行しなさい．集合`s`に要素5を何度追加しても要素5が二つ入ることがないことを確かめなさい．"
    ]
   },
   {
@@ -1561,7 +1561,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. 変数nに集合の要素数を代入する．20など\n"
+    "# 1. 変数nに集合の要素数を代入する．要素数は20など\n"
    ]
   },
   {
@@ -1796,9 +1796,9 @@
     "id": "AnlF6lNKxNkn"
    },
    "source": [
-    "### 4.3 辞書\n",
+    "### 4.3 辞書型\n",
     "Pythonの辞書型(dictionary)は集合型を拡張したデータ構造です．\n",
-    "集合型キーと値のペアの集合です．\n",
+    "辞書型はキーと値のペアの集合です．\n",
     "キーと値の組の集合で，キーで索引付けされます．\n",
     "リストが0番目，1番目，2番目のように添え字で要素を区別するように，辞書ではキーで要素を区別します．\n",
     "\n",
@@ -2001,6 +2001,7 @@
     "id": "8lQ2Dpl1a162"
    },
    "source": [
+    "辞書`d`に要素を追加できます．\n",
     "次の例はキー19と値8の新たな組を辞書`d`に追加しています．"
    ]
   },
@@ -2036,7 +2037,7 @@
     "id": "8lQ2Dpl1a162"
    },
    "source": [
-    "辞書`d`に要素を追加や削除(`delete`)することができます．\n",
+    "辞書`d`から要素を削除(`delete`)できます．\n",
     "次の例はキー11の要素を辞書`d`から削除しています．"
    ]
   },
@@ -2144,7 +2145,7 @@
     "id": "wnQHvZ4Re2ND"
    },
    "source": [
-    "参考：次のように文字列を辞書`d`のキーにすることもできます．"
+    "参考：次のように文字列を辞書のキーにすることもできます．"
    ]
   },
   {
