SUさんの指摘に沿って訂正

--- a/A2-1-3.ipynb
+++ b/A2-1-3.ipynb
@@ -2553,10 +2553,10 @@
     "**練習**\n",
     "同じ処理を千回繰り返すように以下のコード中の`time_to_search`関数を書き替えなさい．\n",
     "リスト`t`に記録する時間は計測時間`t1-t0`を千で割った一回あたりの平均時間にすること．\n",
-    "`entry in list_or_other`の部分を次のように書き替えると千回繰り返すようになる．\n",
+    "`element in list_or_other`の部分を次のように書き替えると千回繰り返すようになる．\n",
     "```\n",
     "    for j in range(1000):\n",
-    "      entry in list_or_other # 上の例で 19 in l の部分\n",
+    "      element in list_or_other # 上の例で 19 in l の部分\n",
     "```\n",
     "また時間をリスト`t`に記録する部分`t.append(t1 - t0)`を次のように書き替えると一回あたりの平均時間が記録される．\n",
     "```\n",
@@ -2591,11 +2591,11 @@
     "d = {11: 5, 13: 6, 17: 7, 19: 8, 23: 9}\n",
     "\n",
     "# 関数の定義\n",
-    "def time_to_search(entry, list_or_other):\n",
+    "def time_to_search(element, list_or_other):\n",
     "  t = []\n",
     "  for i in range(5):\n",
     "    t0 = time.time()\n",
-    "    entry in list_or_other # 上の例で 19 in l の部分\n",
+    "    element in list_or_other # 上の例で 19 in l の部分\n",
     "    t1 = time.time()\n",
     "    t.append(t1 - t0) # 計測時間t1-t0をリストtに保存する\n",
     "  t.sort()\n",
